--- a/tugas.html/tugas(no.1)/tugas-biodata-html/index.html
+++ b/tugas.html/tugas(no.1)/tugas-biodata-html/index.html
@@ -1,4 +1,7 @@
-    <litle>layar utama biografi</litle>
+ <tml>
+ <body>
+<head>    
+ <litle>layar utama biografi</litle>
 </head>
 <body>
     <h1>HSI Boarding School Purworejo</h1>
@@ -20,6 +23,8 @@
         Semoga dengan saya belajar membuat website kedepannya bisa bermanfaat bagi orang banyak.</p>
     </p>
     <hr>
-     <h2>menu:</h2>    
+     <h2>menu:</h2>
+     <a href="biodata.html"><h3>klik ke biodataku</h3></a>
+        
 </body>
 </html>
