--- a/tugas.html/tugas(no.1)/tugas-biodata-html/biodata.html
+++ b/tugas.html/tugas(no.1)/tugas-biodata-html/biodata.html
@@ -1,6 +1,43 @@
 <html>
-<body>
-    <litle></litle>
-    
+    <head>
+        <litle><h1>Biodata santri</h1></litle>
+        <p><b>kelas 10 B-Asrama Ibnu Katsir</b></p>
+        <hr>    
+    </head>    
+    <body>
+<h2>Biodata Singkat</h2>
+<img width="250" src="https://cdn.pixabay.com/photo/2019/10/16/09/09/doraemon-4553920_1280.png" />
+<p>Assalamu'alaikum! saya adalah santri dari HSI Boarding School Purworejo.
+   <br> 
+       saya sangat menyukai teknologi dan sangat ingin belajar cara membuat website sederhana
+   <br>
+       sebagai pondasi untuk pembelajaran html seterusnya.Dan mudah-mudahan saya belajar website
+   <br> 
+       sedahana ini bisa bermanfat bagiku kedepannya.
+<hr>
+<h3>Hobi</h3>
+<ul>
+    <li>joging</li>
+    <li>main futsal</li>
+    <li>membaca buku</li>
+</ul>
+<h4>Cita-cita</h4>
+<ol>
+    <li>programmer</li>
+    <li>founder startup</li>
+    <li>hacher</li>
+</ol>
+<hr>
+<h5>Kontak</h5>
+<p>Whatsap: 0812-9959-4341
+<br>
+Telegram: Faqih Muhammad
+<br>
+Instagram: instagram.com/Muhammad Faqih
+<br>
+Email: faqihganzz09@gmail.com
+</p>
+<hr>
+<a href="index.html"><h5>⏪Kembali ke Halaman Utama</h5></a>
 </body>
 </html>
