--- a/tugas.html/tugas(no.1)/tugas-biodata-html/index.html
+++ b/tugas.html/tugas(no.1)/tugas-biodata-html/index.html
@@ -1,30 +1,29 @@
- <tml>
- <body>
-<head>    
- <litle>layar utama biografi</litle>
+ <html>
+     <head>    
+    <litle><h1>HSI Boarding School Purworejo</h1><litle
+    
 </head>
 <body>
-    <h1>HSI Boarding School Purworejo</h1>
 <hr>
-<p>Selamat datang di website pertamaku.
+<p><b>Selamat datang di website pertamaku.
    <br> 
    Website ini berisi biodata, hobi, dan cita-cita saya sebagai siswa HSI Boarding School Purworejo.
    <br>
-   Silahakan jelajahi halaman biodata untuk mengenal saya lebih lanjut.<p>
+   Silahakan jelajahi halaman biodata untuk mengenal saya lebih lanjut.</b><p>
      <h1>Avatar kesukaanku</h1>
-     <p>Berikut ini avatar yang menggambarkan minat saya</p>
+     <p><b>Berikut ini avatar yang menggambarkan minat saya</b></p>
      <img width="350" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRqDxvz0WFXOFJapSzGajhn6IXRcN-C73DLw&s" />
-     <p>Saya tertarik dengan pembuatan website ketika masih belum tahu apa-apa tentang yang namanya IA.
+     <p><b>Saya tertarik dengan pembuatan website ketika masih belum tahu apa-apa tentang yang namanya IA.
         <br>
         Minatku tumbuh di pembuatan website ketika aku sering melihat <u>banyak website yang menipu warga lokal.</u>
         <br>
         Maka dari itu kedepannya aku ingin membuat website berisi ilmu dalam lingkup agama.
         <br>
-        Semoga dengan saya belajar membuat website kedepannya bisa bermanfaat bagi orang banyak.</p>
+        Semoga dengan saya belajar membuat website kedepannya bisa bermanfaat bagi orang banyak.</b></p>
     </p>
     <hr>
-     <h2>menu:</h2>
-     <a href="biodata.html"><h3>klik ke biodataku</h3></a>
+    <h2>menu:</h2>
+    <a href="biodata.html"><h3>klik ke biodataku</h3></a>
         
 </body>
 </html>
