--- a/tugas.html/tugas_satu/tugas-biodata-html/biodata.html
+++ b/tugas.html/tugas_satu/tugas-biodata-html/biodata.html
@@ -13,7 +13,7 @@
    <br>
        sebagai pondasi untuk pembelajaran html seterusnya.Dan mudah-mudahan saya belajar website
    <br> 
-       sedahana ini bisa bermanfat bagiku kedepannya.
+       sedahana ini bisa bermanfaat bagiku kedepannya.
 <hr>
 <h3>Hobi</h3>
 <ul>
@@ -25,7 +25,7 @@
 <ol>
     <li>programmer</li>
     <li>founder startup</li>
-    <li>hacher</li>
+    <li>hacker</li>
 </ol>
 <hr>
 <h5>Kontak</h5>
