--- a/tugas.html/tugas(no.3/feedback.html
+++ b/tugas.html/tugas(no.3/feedback.html
@@ -7,8 +7,8 @@
           <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <main class="container">
-        <div class="header">
+    <div class="container">
+      <div class="header">
       <h1>Formulir Umpan Balik</h1>
       <p>Kritik,Saran,dan Masukan</p>
       <hr />
@@ -20,25 +20,26 @@
     <a href="feedback.html" class="active">Feedback</a>
     </div>
       </div>
-      </main>
+      </div>
       <hr />
-      <form>
+      <br />
+      <form action="https://httpbin.org/post">
         <section class="box">
         <h3 class="section-title">Formulir kontak & Saran</h3>
         <p>Berikan masukan terbaik anda untuk pengembangan website profil ini. semua iniput bersifat wajib kecuali nama.</p>
-        <div>
-          <label for="inputName">Nama Anda (Opsional)</label>
-          <input type="text" name="nama" id="inputName" />
+        <div class="feedback-form">
+          <label>Nama Anda (opsimal):</label>
+          <input type="text" placeholder="Tulis nama Anda" />
         </div>
-        <div>
+        <div class="feedback-form">
           <label for="inputEmail">Email</label>
           <input type="email" name="email" id="inputEmail" />
         </div>
-        <div>
+        <div class="feedback-form">
           <label for="inputage">Rating Keputusan Website (Skala 1-10)</label>
           <input type="number" name="rating" id="inputRating" />
         </div>
-        <div>
+        <div class="feedback-form">
             <p>Rekomendasi Website ini?</p>
            <input type="radio" name="rekomendasi" id="inputRating" />
           <label for="inputRating">Ya, Sangat</label>
@@ -48,7 +49,7 @@
           <label for="inputRating">Tidak</label>
           <br /><br />
         </div>
-        <div>
+        <div class="feedback-form">
             <p>Topik yang paling menarik</p>
           <input type="checkbox" name="topik" id="inputBiodata" />
           <label for="inputBiodata">Biodata</label>
@@ -58,7 +59,7 @@
           <label for="inputGaleri">Galeri</label>  
           <br /><br />
         </div>
-        <div>
+        <div class="feedback-form">
           <label for="inputSaran">Saran Pengembangan di Bidang:</label>
           <!-- tips shortcut: select>option*4 -->
           <select name="bidang-pengembangan" id="inputBidang">
@@ -68,11 +69,11 @@
             <option value="Pengembagan Website">Pengembagan Website</option>
           </select>
         </div>
-        <div>
+        <div class="feedback-form">
           <label for="inputSaran">Pesan/Saran Lengkap:</label>
           <textarea name="saran" id="inputSaran"></textarea>
         </div>
-        <div class="grid">
+        <div class="button-group">
           <button type="reset">Atur Ulang</button>
           <button type="submit">Kirim Feedback</button>
         </div>
