--- a/tugas.html/tugas(no.3/galeri.html
+++ b/tugas.html/tugas(no.3/galeri.html
@@ -26,7 +26,8 @@
 
       <section class="box">
         <div class="gallery">
-          <h3>Karya Desain</h3>
+          <h3>Karya Desain</h3> 
+          <br>
           <figure class="card">
             <div class="image-box">
               <img src="images/15b3fb70a934b4a593ea3ea077c1034f.jpg" alt="" />
@@ -54,6 +55,12 @@
               <figcaption>Motivasi Diri</figcaption>
             </div>
           </figure>
+          <iframe width="560" height="315" 
+          src="https://www.youtube.com/embed/EarpJiYtfoc?si=V3SFOQaqVTWLhQI7" 
+          title="YouTube video player" frameborder="0" allow="accelerometer;
+           autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;
+            web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+          </iframe>
         </div>
       </section>
     </div>
