--- a/tugas.html/tugas(no.3/jadwal.html
+++ b/tugas.html/tugas(no.3/jadwal.html
@@ -19,7 +19,9 @@
     <a href="galeri.html" >Galeri</a>
     <a href="feedback.html" >Feedback</a>
     </div>
+    </div>
     <hr />
+    <br />
     
     <section class="box">
         <h3 class="section-title">Jadwal Kegiatan Belajar</h3>
@@ -66,6 +68,6 @@
                 </tr>     
                      </table> 
                      </section>
-
+                     </div>
 </body>
 </html>
