--- a/materi.html/index.html/index.html
+++ b/materi.html/index.html/index.html
@@ -1,4 +1,4 @@
-<html>
+<html></html>
 <head>
    # (head) judul 
     <litle>cobain main html</litle>
@@ -33,6 +33,8 @@
     <ul>
         <li>kismis</li>
         <li>kurma</li>
-    </ul>  
+    </ul>
+
+     
 </body>
 </html>
